--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
       <artifactId>selenium-java</artifactId>
       <version>4.28.1</version>
     </dependency>
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.8.0</version>  <!-- Reemplaza con la última versión -->
+    </dependency>
 
     <!-- JUnit 5 API -->
     <dependency>
